--- a/wellnesssite/layout.css
+++ b/wellnesssite/layout.css
@@ -34,8 +34,7 @@ h2 {
     color: white;
 
 }
-
-p {
+.page-one-p {
     font-family: sans-serif;
     font-size: 15px;
     margin-right: 650px;
@@ -97,7 +96,107 @@ p {
     margin-top: 550px;
 }
 
-.iborder {
+.leg {
+    font-family: sans-serif;
     border: solid gray 3px;
     border-radius: 5px;
+    background-color: #6c86a0;
+    border-radius: 10px;
+    color: white;
+    text-align: center;
+    font-size: 20px;
+    padding: 10px;
+    margin-left: 20px;
+    margin-bottom: 10px;
+}
+
+fieldset {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    margin-left: 515px;
+    border: solid gray 3px;
+    border-radius: 5px;
+    height: 800px;
+    width: 800px;
+    display: block;
+    align-items: center;
+}
+
+.fullName,
+.email {
+    font-family: sans-serif;
+    border: solid gray 3px;
+    border-radius: 5px;
+    background-color: #6c86a0;
+    border-radius: 10px;
+    color: white;
+    position: relative;
+    text-align: center;
+    display: block;
+    margin-left: 350px;
+    margin-right: 350px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.formbox {
+    text-align: center;
+}
+
+label {
+    display: block;
+    text-align: center;
+    align-items: right;
+    margin: auto;
+    padding: 10px;
+}
+
+textarea {
+    display: block;
+    margin: auto;
+    margin-top: 15px;
+    width: 500px;
+    padding: 10px;
+}
+
+input {
+display: block;
+margin: auto;
+}
+
+button {
+    font-family: sans-serif;
+    border: solid gray 3px;
+    border-radius: 5px;
+    background-color: #6c86a0;
+    border-radius: 10px;
+    color: white;
+    position: relative;
+    text-align: center;
+    display: block;
+    font-size: 25px;
+    padding: 10px;
+    margin-left: 350px;
+    margin-right: 300px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    box-shadow: inset 2px 2px 3px rgba(255, 255, 255, .6),
+                inset -2px -2px 3px rgba(0, 0, 0, .6);
+}
+
+.styled:hover {
+    background-color: rgb(51, 49, 167);
+}
+
+.styled:active {
+    box-shadow: inset -2px -2px 3px rgba(255, 255, 255, .6),
+                inset 2px 2px 3px rgba(0, 0, 0, .6);
+}
+
+.checkoff {
+    text-align: center;
+    position: relative;
+    font-family: sans-serif;
+    font-size: 11px;
+    text-decoration: overline;
 }
