--- a/wellnesssite/layout.css
+++ b/wellnesssite/layout.css
@@ -42,7 +42,7 @@ h2 {
     padding: 5px;
     text-indent: 4em;
     text-align: justify;
-    line-height: 25px;
+    line-height: 30px;
 }
 
 .meditate {
@@ -114,12 +114,13 @@ fieldset {
     margin-top: 20px;
     margin-bottom: 20px;
     margin-left: 515px;
-    border: solid gray 3px;
+    border: dashed gray 3px;
     border-radius: 5px;
     height: 800px;
     width: 800px;
     display: block;
     align-items: center;
+    background-color: whitesmoke;
 }
 
 .fullName,
@@ -199,4 +200,18 @@ button {
     font-family: sans-serif;
     font-size: 11px;
     text-decoration: overline;
+}
+
+li {
+    font-family: sans-serif;
+    position: relative;
+    text-align: center;
+    margin-left: 500px;
+    padding: 50px;
+    font-size: 25px;
+    margin-top: 20px;
+    border: solid gray 3px;
+    border-radius: 5px;
+    margin-right: 500px;
+    background-color: whitesmoke;
 }
